Second_Step/data/44/115/execution.txt

Comment :=>>-The compilation or preparation of execution has failed
<|--
Scores.java:35: error: bad operand types for binary operator '+'
        result=result+t[i] ;  
                     ^
  first type:  int[]
  second type: int
1 error
Not compiled
--|>
Grade :=>>0.00000
